Mobile Version. Start Page. Navigation Bar.

--- a/less/main.less
+++ b/less/main.less
@@ -1,4 +1,9 @@
-@font-face {
+	
+	#MobileVersionBoby{
+		display: none;
+	}
+
+	@font-face {
 		font-family: Roboto;
 		src: url(../font/roboto/Roboto-Regular.woff);
 	}
@@ -192,7 +197,7 @@
 		}
 	}
 
-	#add_event_button{
+	#add_event_buttonPC{
 		display: none;
 		position: absolute;
 		bottom: 5px;							/* positioning element to the right */
@@ -203,7 +208,7 @@
 		background: url("../images/add_action_buttons.png") no-repeat 0 0 ;
 	}
 
-	#add_event_button[disabled]{
+	#add_event_buttonPC[disabled]{
 		background-position: -81px 0px;
 	}
 
