--- a/less/mixins/mixins.less
+++ b/less/mixins/mixins.less
@@ -107,10 +107,10 @@
 	}
 
 	.display-flex{    
-		display: flex;
-		display: -ms-flex;
-		display: -moz-flex;
-		display: -webkit-flex;
+		display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+		display: -ms-flexbox;      /* TWEENER - IE 10 */
+		display: -webkit-flex;     /* NEW - Chrome */
+		display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 	}
 
 	.centrify(@orientation, @width, @height){
