--- a/less/windows/posted_results.less
+++ b/less/windows/posted_results.less
@@ -1,3 +1,4 @@
+	.posted_results_table,
 	#posted_results_table{
 		display: none;
 		cursor: default;
@@ -90,7 +91,7 @@
 			}
 
 			td.table_avatar{
-				width: 8.77552165%;	//considering padding!
+				width: 8.77552165%;	//including padding!
 				padding: 10px 5px 5px 5px;
 
 				img{
@@ -110,7 +111,7 @@
 			td.table_baby_activity{
 				width: 11.02041732%;
 				text-align: right;
-				*{
+				img {
 					width: 35px;
 					height: 35px;
 				}
@@ -129,4 +130,111 @@
 		}
 	}
 	
-	
+@media all and (max-width:601px), all and (max-height: 450px){
+	//.posted_results_table;
+
+	#posted_results_table_mobile{
+		//overflow-y: scroll;
+		display: none;
+		overflow-y: auto;
+		overflow-x: hidden;
+		height: calc(~"100vh - 56px");
+		-webkit-overflow-scrolling: touch;		
+
+		> section::after{
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+			font-size: 20px;
+			padding-left: 30px;
+			padding-right: 30px; 
+			text-align: center;
+			color: grey;
+		}
+
+		caption{ 
+			background-color: inherit; 
+			padding-top: 13px;
+			padding-bottom: 13px;
+			font-family: RobotoMedium, sans-serif;
+			text-align: left;
+			color: #78797B;
+			margin-left: 18px;
+		}
+
+		tbody{
+			display: block;
+			overflow: hidden;
+			border-radius: 0px;
+			margin: 0;
+			border: 0;
+			outline: 0;
+		}
+
+		tr{
+			width: 100%;
+			//height: 20px;
+			background-color: #FFFFFF;
+			cursor: pointer;
+			.border-radius(5px);
+			.transition(all, 0.30s, ease-in-out);
+		}
+
+		td, th{ 
+			vertical-align: middle;	
+			padding: 10px 5px;
+		}
+
+		td.table_avatar{
+			width: 20.277777777777777777777777777778%;	
+			text-align: center;
+
+			img{
+				//border: @border-width solid #FFFFFF;
+				width: 40px;
+				height: 40px;
+				display: flex;
+				margin: 0 auto;
+				.border-radius(50%);
+			}
+		}	
+
+		td.table_baby_name{
+			display: none;
+		}
+
+		td.table_feed_time{	
+			width: 23.055555555555555555555555555556%; 
+			font-family: RobotoLight, sans-serif;
+		}
+
+		td.table_baby_activity{
+			width: 11.388888888888888888888888888889%;
+			text-align: center;
+			img { 
+				width: 30px;
+				height: 30px;
+				display: flex;
+				margin: 0 auto;
+			}
+		}
+
+		td.table_notes{
+			width: 45.277777777777777777777777777778%;
+			text-align: left;
+			padding-left: 5px;
+			font-family: RobotoMedium, sans-serif;
+			color: #5B5B5B;
+			font-size: 14px;
+		}
+
+		td.table_data_modify{
+			width: 11.388888888888888888888888888889%;
+			color: #949494;
+		}
+		
+	}
+}
