Mobile version: Action Window added. Test1

--- a/less/fonts-icons.less
+++ b/less/fonts-icons.less
@@ -6,3 +6,7 @@
 //***** Satisfy font *****
 // Used for title in Get-started page
 @import url("http://fonts.googleapis.com/css?family=Satisfy");
+
+//***** Material Design Icons *****
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
