--- a/less/mobile.less
+++ b/less/mobile.less
@@ -20,9 +20,9 @@
 		width: 100vw;
 		background-color: #E2E3E4;
 
-		#add_event_buttonM { bottom: 10px; right: 10px; }
+		#add_event_button_mobile { bottom: 10px; right: 10px; }
 
-		#add_event_buttonM i{ 
+		#add_event_button_mobile i{ 
 			font-size: 2.8rem; 
 			color: #5D4239;
 		}
@@ -38,7 +38,7 @@
 
  			.actions_area_mobile{ float: left; margin-left: 15px; }
  			
- 			.search_icon_mobile{ float: right; }
+	 		#apply_event_button_mobile{ display: none; }
 
 			.button-collapse {
 				padding-left: 10px;
@@ -46,9 +46,7 @@
 				i {  font-size: 2.5rem; }
 			}
 
-			#actions-list-item{
-				font-size: 1.5rem;
-			}
+			#actions_logo{ font-size: 1.5rem; }
 		}
 
 		#search_area_mobile {
@@ -109,12 +107,10 @@
 		box-shadow: none;
 	}
 
-	.modal-body{
-		height: 100%;
-	}
+	.modal-body{ height: 100%; }
 
 	/* header "Snug Baby" */
-	#auth-page-header { 	font-size: 42px;	}
+	#auth-page-header { font-size: 42px; }
 
 	/* Brief Snug Baby description */
 	#auth-page-summary{
@@ -123,14 +119,12 @@
 		font-size: 14px;
 		//line-height: 20px;
 
-		div{   
+		div{   3
 			padding-top: 15px; 
 			padding-bottom: 0px;  
 		}
 
 	}
 	
-	.normalized{
-		height: auto !important;
-	}
+	.normalized{ height: auto !important; }
 }
