--- a/less/styles.less
+++ b/less/styles.less
@@ -1,12 +1,13 @@
 
 @import url("../css/jquery-ui.min.css");
 @import url("../css/jquery.simplecolorpicker.css");
+
 @import url("../css/jquery.simplecolorpicker-glyphicons.css");
 @import url("buttons/auth-btn.less");
 @import url("buttons/next-back-btn.less");
 @import url("windows/create_person.less");
 @import url("windows/add_action.less");
 @import url("windows/posted_results.less");
-@import url("../css/jquery-clockpicker.min.css");
+@import url("../css/clockpicker.css");
 @import url("main.less");
 @import url("mobile.less");
