--- a/less/windows/posted_results.less
+++ b/less/windows/posted_results.less
@@ -147,7 +147,7 @@
 			top: 50%;
 			left: 50%;
 			margin-right: -50%;
-			transform: translate(-50%, -50%);
+			.transform(translate(-50%, -50%));
 			font-size: 20px;
 			padding-left: 30px;
 			padding-right: 30px; 
