--- a/less/windows/posted_results.less
+++ b/less/windows/posted_results.less
@@ -18,7 +18,7 @@
 				left: 50%;
 				font-family: cursive;
 				margin-right: -50%;
-				transform: translate(-50%, -50%);
+				.transform(translate(-50%, -50%));
 				font-size: 20px;
 				color: grey;
 			}
