Added Select Baby Window.

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5015,16 +5015,19 @@ nav {
       font-size: 2rem; }
   @media only screen and (min-width : 993px) {
     nav a.button-collapse,
-    nav a.button-close {
+    nav a.button-close,
+    nav a.button-back {
       display: none; } }
   nav .button-collapse,
-  nav .button-close {
+  nav .button-close,
+  nav .button-back {
     float: left;
     position: relative;
     z-index: 1;
     height: 56px; }
     nav .button-collapse i,
-    nav .button-close i{
+    nav .button-close i,
+    nav .button-back i{
       font-size: 2.7rem;
       height: 56px;
       line-height: 56px; }
