--- a/less/mobile.less
+++ b/less/mobile.less
@@ -1,21 +1,15 @@
 @media all and (max-width:601px), all and (max-height: 450px){
-	body{
-		background-color: #E2E3E4;
-	}
+	
+	body{ background-color: #E2E3E4; }
 
-	html, body{
-		overflow: hidden !important;
-	}
+	html, body{ overflow: hidden !important; }
 
-	main{
-		display: none;
-	}
+	main{ display: none; }
 
 	.modalWindow-601px-450px;
 
-	.button-close{
-		display: none;
-	}
+	.button-close, 
+	.button-back { display: none; }
 
 	#MobileVersionBoby{
 		display: block;
@@ -26,11 +20,9 @@
 		#add_event_button_mobile { bottom: 10px; right: 10px; display: none; }
 		#add_event_button_mobile i{ font-size: 2.8rem; color: #5D4239; }
 
-
 		/******  Fixed top header navigation  ******/
-		nav#mobile-header {
+		#mobile-header {
 			background-color: #00BBD4;
-
 			ul:not(.side-nav) li:hover, 
 			ul:not(.side-nav) li.active{
  				background-color: inherit; 
@@ -41,7 +33,8 @@
 	 		#apply_event_button_mobile{ display: none; }
 
 			.button-collapse,
-			.button-close {
+			.button-close,
+			.button-back {
 				padding-left: 10px;
 				padding-right: 10px;
 				i {  font-size: 2.5rem; }
