--- a/less/styles.less
+++ b/less/styles.less
@@ -7,6 +7,7 @@
 @import url("buttons/next-back-btn.less");
 @import url("windows/create_person.less");
 @import url("windows/add_action.less");
+@import url("windows/select_baby.less");
 @import url("windows/posted_results.less");
 @import url("../css/clockpicker.css");
 @import url("main.less");
