--- a/less/windows/add_action.less
+++ b/less/windows/add_action.less
@@ -8,6 +8,7 @@
 		-webkit-overflow-scrolling: touch;
 	}
 
+	#person_avatar_mobile{cursor: pointer; }
 	.material-icons { color: #59595B; }
 	.mdi-navigation-arrow-drop-down { color: #C5C6CA !important; }
 
