--- a/less/mixins/mixins.less
+++ b/less/mixins/mixins.less
@@ -124,7 +124,9 @@
 			}
 
 			& when (@vertical){
-				/* ... */
+				position: absolute;
+				top: 50%;
+				.transform(translateY(-50%));
 			}
 
 			& when (@both){
