--- a/less/windows/add_action.less
+++ b/less/windows/add_action.less
@@ -80,4 +80,29 @@
 		}
 	}
 
+	//customize a date-picker
+	.picker--opened .picker__frame{	.centrify("vertical"); }
+	.picker--opened .picker__box{ .centrify("vertical"); }
+	.picker--opened .picker__holder{  background: rgba(0, 0, 0, 0.52) !important;	}
+
+	.picker__nav--next:hover, .picker__nav--prev:hover,
+	.picker__nav--next:active, .picker__nav--prev:active { outline: 0 !important; }
+
+	.picker__date-display{
+		text-align: left !important;
+		padding-bottom: 0px !important;
+	}
+
+	.picker__date-display-wo-year{
+		font-size: 2.3rem;
+		padding: 2.5px 5px 15px 25px;
+		font-weight: 500;
+	}
+
+	.picker__date-display-w-year{
+		font-size: 1.2rem;
+		padding: 15px 5px 2.5px 25px;
+		color: rgba(255, 255, 255, 0.4);
+	}
+	
 }
