--- a/less/mixins/mixins.less
+++ b/less/mixins/mixins.less
@@ -125,7 +125,7 @@
 
 			& when (@vertical){
 				position: absolute;
-				top: 50%;
+				top: 50% !important;
 				.transform(translateY(-50%));
 			}
 
