--- a/less/windows/add_action.less
+++ b/less/windows/add_action.less
@@ -14,7 +14,7 @@
 
 	.avatar_panel_mobile,
 	.activity_panel_mobile,
-	.activity_params_panel_mobile,
+	.amount_panel_mobile,
 	.date_time_panel_mobile,
 	.notes_panel_mobile{
 		height: 70px;
@@ -72,7 +72,7 @@
 		left: 0rem !important;	/* align label to the left side of an input box*/
 	}
 
-	.activity_params_panel_mobile{
+	.date_time_panel_mobile{
 		.information .input-wrapper{
 			float: left;
 			margin-right: 5%;
@@ -94,6 +94,24 @@
 		outline: none;
 		position: absolute;
 		z-index: 10000;
+		visibility:hidden;
+		opacity:0;
+		transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+	}
+
+	.popover-main.clockpicker--opened {
+		visibility: visible;
+		opacity: 1;
+		transition-delay: 0s;
+	}
+
+	.popover-main.clockpicker--opened .popover__holder{
+		transition-delay: 0s;
+	}
+	
+	.popover-main:not(.clockpicker--opened)  .popover__holder{
+		height: 0;
+		transition: height 0s linear 0.5s;
 	}
 
 	.popover{
@@ -171,7 +189,7 @@
 	}
 
 	.clockpicker-popover .popover-content {
-		background-color: #fAf8f8;
+		background-color: #FAFAFA;
 		margin-top: 20px;
 	}
 
@@ -187,6 +205,7 @@
 		text-align: left !important;
 		color: #26a69a;
 		background-color: #FAFAFA;
+		&:hover {  background-color: #EAEAEA !important; }
 	}
 
 	.popover-title{	padding: 0; }
@@ -199,19 +218,13 @@
 	}
 
 	.clockpicker-button.pm-button { margin: 1px 1px 1px 130px; }
-	
-	.clockpicker-button.am-button, 
-	.clockpicker-button.pm-button{ 
+	.clockpicker-button.pm-button,
+	.clockpicker-button.am-button { 
 		padding: 10px;
 		border-radius: 50%;
 	}
 
 	.clockpicker-am-pm-block{
 		text-align: center;
-	}
-
-	.clockpicker-canvas, .clockpicker-dial{
-		width: 240.813px;
-		height: 240.813px;
 	}
 }
