Fixed bug -> 'Unable to create an event (git add .! not baby) with already existed baby'. Adjusted styles of Calendar and Timepicker.

--- a/less/main.less
+++ b/less/main.less
@@ -471,7 +471,7 @@
 
 	#diaper_content > section > div:first-of-type{
 		position: absolute;
-		.transition(all, 0.30s, ease-in-out);
+		.transition(all 0.30s ease-in-out);
 	}
 
 
@@ -512,7 +512,7 @@
 	#food_content	input[name="food_amount"],
 	#food_content	input[name="food_duration"]{
 		border: @border-width solid #dadada;
-		.transition(all, 0.30s, ease-in-out);
+		.transition(all 0.30s ease-in-out);
 		.border-radius(5px);
 	}
 
