--- a/less/mobile.less
+++ b/less/mobile.less
@@ -21,7 +21,7 @@
 		cursor: pointer;
 		z-index: 30;
 		.transform(rotate(0deg));
-		.transition(all ,.5s, ease-in-out);
+		.transition(all .5s ease-in-out);
 	}
 
 	#hamburger-button > div span{
@@ -34,7 +34,7 @@
 		left: 13.5px;
 		top: 13.5px;
 		.transform(rotate(0deg));
-		.transition(all, .25s, ease-in-out);
+		.transition(all .25s ease-in-out);
 
 		&:nth-child(1) { top: 20px; }
 		&:nth-child(2), &:nth-child(3) { top: 27px; }
@@ -54,7 +54,7 @@
 	/* transformation from X to Arrow */
 	#hamburger-button > div.to-Arrow span{
 		.transform( rotate(180deg));
-		.transition(all, .5s, ease-in-out);
+		.transition(all .5s ease-in-out);
 		&:nth-child(1){
 			top: 22px;
 			left: 24%;
