--- a/less/windows/create_person.less
+++ b/less/windows/create_person.less
@@ -64,7 +64,7 @@
 				input#person_birthday{
 					border: @border-width solid #dadada;
 					padding: 3px 0px 3px 5px;
-					.transition(all, 0.30s, ease-in-out);
+					.transition(all 0.30s ease-in-out);
 					.border-radius(5px);
 
 					&:focus{
