--- a/less/windows/posted_results.less
+++ b/less/windows/posted_results.less
@@ -72,7 +72,7 @@
 					color: inherit;
 					cursor: pointer;
 					.border-radius(5px);
-					.transition(all, 0.30s, ease-in-out);
+					.transition(all 0.30s ease-in-out);
 
 					&:hover{
 						color: #FFF;
@@ -180,7 +180,7 @@
 			background-color: #FFFFFF;
 			cursor: pointer;
 			.border-radius(5px);
-			.transition(all, 0.30s, ease-in-out);
+			.transition(all 0.30s ease-in-out);
 		}
 
 		td, th{ 
