Added Create New baby Window logic.

--- a/less/mixins/mixins.less
+++ b/less/mixins/mixins.less
@@ -8,7 +8,7 @@
 		user-select: @selection;
 	}
 
-	.box-shadow(@arguments){
+	.box-shadow(...){
 		-webkit-box-shadow: @arguments;
 		-moz-box-shadow: @arguments;
 		box-shadow: @arguments;
