--- a/less/styles.less
+++ b/less/styles.less
@@ -5,7 +5,8 @@
 @import url("../css/jquery.simplecolorpicker-glyphicons.css");
 @import url("buttons/auth-btn.less");
 @import url("buttons/next-back-btn.less");
-@import url("windows/create_person.less");
+@import url("windows/create_baby_p.less");
+@import url("windows/create_baby_m.less");
 @import url("windows/add_action.less");
 @import url("windows/select_baby.less");
 @import url("windows/posted_results.less");
