--- a/less/mobile.less
+++ b/less/mobile.less
@@ -3,6 +3,10 @@
 	body{ background-color: #E2E3E4; }
 
 	html, body{ overflow: hidden !important; }
+	
+	.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav{
+		.box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.3), 0 2px 10px 0 rgba(0, 0, 0, 0.12); );
+	}
 
 	main{ display: none; }
 
