--- a/less/mobile.less
+++ b/less/mobile.less
@@ -80,6 +80,40 @@
 
 	/*-----------------------------------*/
 
+ 	.dcs-s-dcs-t-dcs-xb, .dcs-s-dcs-t.dcs-c-dcs-d-dcs-t, .dcs-s-dcs-t-dcs-rd, .modal-dialog.data-dialog, .modal-dialog-content > .simple-sharing-contents, 
+ 	.modal-dialog.data-dialog .modal-dialog-content,	.link-management-url-container, .link-management-container{
+		width: 100% !important;
+	}
+
+	.dcs-s-dcs-t{
+		padding: 30px 15px !important;
+		left: 0 !important;
+	}
+
+	.simple-sharing-link-area > div:first-child {
+		display: none;
+	}
+
+	.link-management-menu {
+		width: 99.30555556% !important; // border 1px including
+	}
+
+	.simple-sharing-vertical-spacer {
+		height: 12px;
+	}
+
+	.simple-sharing-note-area-container {
+		display: none;
+	}
+	
+	.simple-sharing-note-area-container {
+		display: block;
+	}
+	
+	.simple-sharing-button-bar {
+		margin-top: 25px;
+	}
+
 	#MobileVersionBoby{
 		display: block;
 		flex-direction: column;
@@ -113,7 +147,6 @@
 			border-bottom: 1px solid #111;
 		}
 		/********************************************/
-
 	}
 
 }
