'Choose baby field should be clickable' issue fixed.

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -78,6 +78,8 @@
 		}
 	}
 
+	.clickable-disabled { position:absolute; left:0; right:0; top:0; bottom:0; display: block; }
+	.hidden-element { display: none !important;}
 	/*-----------------------------------*/
 
  	.dcs-s-dcs-t-dcs-xb, .dcs-s-dcs-t.dcs-c-dcs-d-dcs-t, .dcs-s-dcs-t-dcs-rd, .modal-dialog.data-dialog, .modal-dialog-content > .simple-sharing-contents, 
