Added Remove Baby Window logic.

--- a/less/windows/select_baby.less
+++ b/less/windows/select_baby.less
@@ -1,5 +1,6 @@
 @media all and (max-width:601px), all and (max-height: 450px){
-	#select_baby_table_mobile{
+	#select_baby_table_mobile,
+	#remove_baby_table_mobile{
 		display: none;
 		overflow-y: auto;
 		overflow-x: hidden;
@@ -8,7 +9,8 @@
 		-webkit-overflow-scrolling: touch;
 	}
 
-	#select_baby_table_mobile section{
+	#select_baby_table_mobile section,
+	#remove_baby_table_mobile section{
 		width: 100vw;
 		margin-top: 2px;
 	}
