Fixed bug with rounding chosen default image. Update 3

--- a/less/windows/add_action.less
+++ b/less/windows/add_action.less
@@ -72,8 +72,7 @@
 
 	.avatar_panel_mobile,
 	.new_avatar_panel_mobile{
-		.illustration img { width: 42px; height: 42px;}
-		.illustration img.round-image { border-radius: 50%;}
+		.illustration img { width: 42px; height: 42px; border-radius: 50%;}
 	}
 
 	.activity_panel_mobile {
