Removed settings from menu, Remove -> Delete, Modify -> Edit; Added trash button.

--- a/less/windows/add_action.less
+++ b/less/windows/add_action.less
@@ -23,7 +23,9 @@
 	.notes_panel_mobile,
 	.diaper_panel_mobile,
 	.new_avatar_panel_mobile,
-	.birthday_panel_mobile{
+	.birthday_panel_mobile, 
+	.trash_panel_mobile,
+	.duration_panel_mobile{
 		height: 70px;
 		width: 100vw;
 		margin-top: 5px;
@@ -101,6 +103,14 @@
 		.information form > div:nth-of-type(2){
 			float: left;
 			width: 50%;
+		}
+	}
+	
+	.trash_panel_mobile{
+		display: none;
+		#delete_action_mobile{
+			font-size: 19px;
+    		color: #7C7D7F;
 		}
 	}
 
